# python-demandapi-client

./: .env-example  .flake8  .gitignore  .gitignore.swp  CONTRIBUTING.md  LICENSE  README.md  pycodestyle  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: pythonpackage.yml  release.yml
demandapi/: api.py
dynatademand/: __init__.py  api.py  errors.py  main.py  validator.py
dynatademand/schemas/: get_line_item.json  lineitem_update.json  project_new.json
tests/: test_attributes.py  test_authentication.py  test_categories.py  test_countries.py  test_events.py  test_feasibility_pricing.py  test_invoices.py  test_invoices_summary.py  test_line_items.py  test_lineitems.py  test_permissions.py  test_projects.py  test_roles.py  test_sources.py  test_summary.py  test_teams.py  test_template.py  test_users.py  test_validator.py
tests/test_files/: Data+Quality+Request+Template.xlsx  buy_project.json  create_line_item.json  create_template.json  get_attributes.json  get_company_users.json  get_countries.json  get_event.json  get_events.json  get_feasibility.json  get_line_items.json  get_lineitem.json  get_project.json  get_project_detailed_report.json  get_project_permissions.json  get_projects.json  get_roles.json  get_sources.json  get_study_metadata.json  get_survey_topics.json  get_teams.json  get_templates.json  get_user_info.json  update_line_item.json  update_project.json  update_project_invalid.json  update_template.json  upsert_project_permissions.json
tests/test_files/examples/: project_new.json
(+30 files in other folders)
