[tool.poetry]
name = "dynatademand"
version = "1.0.2"
description = "A Python client library for the Dynata Demand API"
authors = ["Ridley Larsen <Ridley.Larsen@dynata.com>", "Bradley Wogsland <Bradley.Wogsland@dynata.com>", "Nathan Workman <Nathan.Workman@dynata.com>"]

[tool.poetry.dependencies]
python = "^2.7 || ^3.5 || ^3.6 || ^3.7"
responses = "0.10.6"
requests = "2.22.0"
pytest = "4.6.6"
jsonschema = "3.2.0"
pytest-runner = "5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
